--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -10,7 +10,7 @@
                 <h3 class="card-title text-center mb-4">Login</h3>
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                        <div class="alert alert-{% if 'error' in message.tags %}danger{% else %}{{ message.tags }}{% endif %}">{{ message }}</div>
                     {% endfor %}
                 {% endif %}
                 <form method="post" novalidate>
@@ -25,8 +25,12 @@
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button>
                 </form>
-                <div class="mt-3 text-center">
-                    Don't have an account? <a href="/accounts/signup/">Sign Up</a>
+                <div class="mt-2 text-center">
+                    <a href="/accounts/forgot/" style="text-decoration: none;">Forgot password?</a>
+                </div>
+                <hr>
+                <div class="text-center">
+                    <a href="/accounts/signup/" class="btn btn-success w-100" style="text-decoration: none;">Create New Account</a>
                 </div>
             </div>
         </div>
