--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,11 @@
                         <a class="nav-link" href="/cart/">Cart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/accounts/login/">Login/Register</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-link" href="/accounts/profile/">Profile</a>
+                        {% else %}
+                            <a class="nav-link" href="/accounts/login/">Login</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
@@ -42,7 +46,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Contact Information</h5>
-                    <p>Email: info@techhub.com<br>Phone: +123 456 7890</p>
+                    <p>Email: shiblysohaib@gmail.com<br>Phone: +8801234567891</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Social Media</h5>
