--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -18,7 +18,7 @@
                     <label class="form-label">Payment Method</label><br>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="payment_method" id="cash" value="cash" checked>
-                        <label class="form-check-label" for="cash">Cash on Delivery</label>
+                        <label class="form-check-label" for="cash">Cash</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="payment_method" id="sslcommerz" value="sslcommerz">
